# BlueDjinn

./: CMakeLists.txt  LICENSE  cleanBuild.py  main.cpp
core/inc/: bingo.h  gambling.h
core/inc/bingo/: bingo.h  cards.h
core/inc/slot/: slot.h
core/src/: bingo.c
core/src/bingo/: bingo.c  cards.c
graphics/inc/: camera.h  graphics_core.hpp  graphics_shaders.hpp
graphics/src/: blueMarble.cpp  graphics_core.cpp  graphics_shaders.cpp
shaders/: triangle_frag.glsl  triangle_vert.glsl
